<resources>
    <string name="app_name">Availabilities</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="empty"></string>
    <string name="program">Program :</string>
    <string name="department">Department :</string>
    <string name="teacherName">Name :</string>
    <string name="addFav">Adding to favourite. Updating</string>
    <string name="removeFav">Removing from favourite. Updating</string>
    <string name="searchHint">Name/Department</string>
    <string name="tab1_title">Instructors</string>
    <string name="tab2_title">Favorites</string>
    <string name="tab3_title">Search</string>
</resources>
